src/snapshots/ruff__linter__tests__C410_C410.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnnecessaryLiteralWithinListCall: list
  location:
    row: 1
    column: 6
  end_location:
    row: 1
    column: 18
  fix: ~
- kind:
    UnnecessaryLiteralWithinListCall: tuple
  location:
    row: 2
    column: 6
  end_location:
    row: 2
    column: 18
  fix: ~
- kind:
    UnnecessaryLiteralWithinListCall: list
  location:
    row: 3
    column: 6
  end_location:
    row: 3
    column: 14
  fix: ~
- kind:
    UnnecessaryLiteralWithinListCall: tuple
  location:
    row: 4
    column: 6
  end_location:
    row: 4
    column: 14
  fix: ~

