src/snapshots/ruff__linter__tests__C411_C411.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: UnnecessaryListCall
  location:
    row: 2
    column: 0
  end_location:
    row: 2
    column: 20
  fix:
    patch:
      content: "[i for i in x]"
      location:
        row: 2
        column: 0
      end_location:
        row: 2
        column: 20

