src/snapshots/ruff__linter__tests__C414_C414.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    UnnecessaryDoubleCastOrProcess:
      - list
      - list
  location:
    row: 2
    column: 1
  end_location:
    row: 2
    column: 14
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - tuple
      - list
  location:
    row: 3
    column: 1
  end_location:
    row: 3
    column: 15
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - list
      - tuple
  location:
    row: 4
    column: 1
  end_location:
    row: 4
    column: 15
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - tuple
      - tuple
  location:
    row: 5
    column: 1
  end_location:
    row: 5
    column: 16
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - set
      - set
  location:
    row: 6
    column: 1
  end_location:
    row: 6
    column: 12
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - list
      - set
  location:
    row: 7
    column: 1
  end_location:
    row: 7
    column: 13
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - tuple
      - set
  location:
    row: 8
    column: 1
  end_location:
    row: 8
    column: 14
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - sorted
      - set
  location:
    row: 9
    column: 1
  end_location:
    row: 9
    column: 15
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - reversed
      - set
  location:
    row: 10
    column: 1
  end_location:
    row: 10
    column: 17
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - list
      - sorted
  location:
    row: 11
    column: 1
  end_location:
    row: 11
    column: 16
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - tuple
      - sorted
  location:
    row: 12
    column: 1
  end_location:
    row: 12
    column: 17
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - sorted
      - sorted
  location:
    row: 13
    column: 1
  end_location:
    row: 13
    column: 18
  fix: ~
- kind:
    UnnecessaryDoubleCastOrProcess:
      - reversed
      - sorted
  location:
    row: 14
    column: 1
  end_location:
    row: 14
    column: 20
  fix: ~

